--- a/monkstage.topmonks.com/src/stylesheets/header.scss
+++ b/monkstage.topmonks.com/src/stylesheets/header.scss
@@ -95,7 +95,7 @@
   @media screen and (min-width: 840px) {
     height: 88px;
     .tm-layout-wrapper {
-      padding: 30px 0 0 16px;
+      padding: 30px 16px 0;
     }
     + main {
       margin-top: 88px;
