--- a/monkstage.topmonks.com/src/stylesheets/header.scss
+++ b/monkstage.topmonks.com/src/stylesheets/header.scss
@@ -117,9 +117,11 @@
   .tm-hamburger__container::after {
     color: var(--tm-primary);
   }
-  .tm-menu {
-    transform: translate(-8px, -64px);
-    z-index: -1;
+  @media screen and (max-width: 839px) {
+    .tm-menu {
+      transform: translate(-8px, -64px);
+      z-index: -1;
+    }
   }
 }
 
