--- a/monkstage.topmonks.com/src/stylesheets/main.scss
+++ b/monkstage.topmonks.com/src/stylesheets/main.scss
@@ -44,9 +44,7 @@ section {
 .tm-img--fullwidth-wrapper {
   width: 100%;
   overflow-x: hidden;
-  transform: 50%;
 }
-
 hr {
   height: 0;
   border: 0;
@@ -65,7 +63,12 @@ hr {
   text-transform: uppercase;
   &.tm-btn--inverse {
     color: var(--tm-secondary);
-    background-color: var(--tm-primary);
+    background: linear-gradient(187.18deg, #EE72E9 -23.89%, #8363F9 107.68%);
+    transition: all 0.1s ease-in-out;
+    &:hover {
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(187.18deg, #EE72E9 -23.89%, #8363F9 107.68%);
+      text-decoration: none;
+    }
   }
 }
 .tm-box {
