--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -386,6 +386,10 @@ footer {
       padding: 0 4px;
     }
   }
+  .copy-and-media .tm-layout-wrapper {
+    border-top: 1px solid hsla(0,0%,100%,.5);
+    padding-top: 24px;
+  }
 }
 
 
