--- a/www.topmonks.cz/src/stylesheets/jobs.scss
+++ b/www.topmonks.cz/src/stylesheets/jobs.scss
@@ -31,6 +31,9 @@ p, a {
     color: #000000;
     font-size: 18px;
     text-align: center;
+    @media (max-width: 480px) {
+      margin-top: 2.5em;
+    }
   }
 
   @media screen and (min-width: 840px) {
@@ -39,6 +42,7 @@ p, a {
     }
   }
 }
+
 //
 
 //* Section: TopMonks Values *//
@@ -58,6 +62,7 @@ p, a {
     }
   }
 }
+
 //
 
 //* Lines - hr *//
@@ -75,6 +80,7 @@ p, a {
 
 .line-between_grey {
   border: none;
+
   hr {
     background-color: #F3F3F3;
     @media (max-width: 840px) {
@@ -85,6 +91,7 @@ p, a {
 
 .line-between_white {
   border: none;
+
   hr {
     background-color: #FFFFFF;
     @media (max-width: 840px) {
@@ -92,6 +99,7 @@ p, a {
     }
   }
 }
+
 //
 
 //* Section: TopMonks Projects *//
@@ -109,6 +117,7 @@ p, a {
     margin-bottom: 58px;
   }
 }
+
 //
 
 //* Section: TopMonks Jobs Info *//
@@ -150,6 +159,7 @@ p, a {
     }
   }
 }
+
 //
 
 .middle-text {
@@ -186,4 +196,5 @@ p, a {
     margin: 8px auto;
   }
 }
+
 //
