--- a/www.topmonks.com/src/stylesheets/jobs.scss
+++ b/www.topmonks.com/src/stylesheets/jobs.scss
@@ -21,10 +21,28 @@ p, a {
 
 //* Section: Main - Jobs*//
 #jobs-main {
+  line-height: 26px;
+
   .jobs_positions h3 {
     font-size: 24px;
     font-weight: normal;
-    padding-bottom: 14px;
+    text-transform: uppercase;
+    text-align: left;
+  }
+
+  .hire-jobs {
+    li {
+      border-bottom: 2px solid #f3f3f3;
+      line-height: 68px;
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+
+    span.location {
+      float: right;
+      color: #9B9B9B;
+    }
   }
 
   .contact-info p {
@@ -42,6 +60,7 @@ p, a {
     }
   }
 }
+
 //
 
 //* Section: TopMonks Values *//
@@ -61,6 +80,7 @@ p, a {
     }
   }
 }
+
 //
 
 //* Lines - hr *//
@@ -78,6 +98,7 @@ p, a {
 
 .line-between_grey {
   border: none;
+
   hr {
     background-color: #F3F3F3;
     @media (max-width: 840px) {
@@ -88,6 +109,7 @@ p, a {
 
 .line-between_white {
   border: none;
+
   hr {
     background-color: #FFFFFF;
     @media (max-width: 840px) {
@@ -95,6 +117,7 @@ p, a {
     }
   }
 }
+
 //
 
 //* Section: TopMonks Projects *//
@@ -112,6 +135,7 @@ p, a {
     margin-bottom: 58px;
   }
 }
+
 //
 
 //* Section: TopMonks Jobs Info *//
@@ -153,6 +177,7 @@ p, a {
     }
   }
 }
+
 //
 
 .middle-text {
@@ -189,4 +214,5 @@ p, a {
     margin: 8px auto;
   }
 }
+
 //
