--- a/monkstage.topmonks.com/src/stylesheets/header.scss
+++ b/monkstage.topmonks.com/src/stylesheets/header.scss
@@ -95,7 +95,7 @@
   @media screen and (min-width: 840px) {
     height: 88px;
     .tm-layout-wrapper {
-      padding: 30px 0 0 16px;
+      padding: 30px 16px 0;
     }
     + main {
       margin-top: 88px;
@@ -105,6 +105,8 @@
       &.tm-btn {
         color: var(--tm-primary);
         background-color: var(--tm-secondary);
+        display: inline;
+        margin-left: 1.5em;
       }
     }
   }
@@ -115,9 +117,11 @@
   .tm-hamburger__container::after {
     color: var(--tm-primary);
   }
-  .tm-menu {
-    transform: translate(-8px, -64px);
-    z-index: -1;
+  @media screen and (max-width: 839px) {
+    .tm-menu {
+      transform: translate(-8px, -64px);
+      z-index: -1;
+    }
   }
 }
 
@@ -146,6 +150,9 @@
       padding: 12px;
       margin: 4px;
       text-transform: capitalize;
+      &.tm-btn {
+        text-align: left;
+      }
     }
   }
 }
