TM Jobs.cz + com: side img - better quality

--- a/www.topmonks.cz/src/stylesheets/jobs.scss
+++ b/www.topmonks.cz/src/stylesheets/jobs.scss
@@ -180,7 +180,7 @@ p, a {
     background-size: 100%;
   }
   main {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1551196541/topmonks.com/jobs/img_abovefold.png") center 8% no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/v1551973762/topmonks.com/jobs/img_side.png") center 8% no-repeat;
     background-size: 440px 571px;
     background-position-x: 0;
   }
