--- a/www.topmonks.com/src/stylesheets/xixoio.scss
+++ b/www.topmonks.com/src/stylesheets/xixoio.scss
@@ -54,6 +54,16 @@ hr.purple {
   margin: 0 auto;
 }
 
+a.btn {
+  font-size: 2.5em; //40px
+  color: #FFFFFF;
+}
+
+a.btn_purple {
+  background: url("/images/case-studies/xixoio/union.png") center no-repeat;
+margin: 2em 0;
+}
+
 // Section: Introduction //
 .intro {
   height: 46.875em; //750px
