--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -597,4 +597,9 @@ li.tm-partners__item--adler {
   .tm-layout-wrapper {
     padding: 24px;
   }
+  .tm-menu__list a {
+    font-size: 16px;
+  }
 }
+
+
