--- a/www.xduediligence.com/src/stylesheets/_navbar.scss
+++ b/www.xduediligence.com/src/stylesheets/_navbar.scss
@@ -43,7 +43,7 @@
           color: fade-out($black, .4);
           padding: 0 1rem;
           &:hover {
-            color: $white;
+            color: $primary;
           }
         }
         &:last-child {
