--- a/www.topmonks.com/src/stylesheets/v2.scss
+++ b/www.topmonks.com/src/stylesheets/v2.scss
@@ -14,8 +14,6 @@
   --tm-grey: #9b9b9b;
   --tm-article-background: #f8fbfc;
   --tm-black: #4a4a4a;
-  --tm-black-title: #3C3C3B;
-
 }
 
 body {
@@ -23,19 +21,10 @@ body {
   margin: 0;
 }
 
-//section:target {
-//  @media screen and (max-width: 479px) {
-//    margin-top: 96px;
-//  }
-//  @media screen and (min-width: 480px) {
-//    margin-top: 88px;
-//  }
-//}
 
 .tm-layout-wrapper {
   max-width: 1008px;
   margin: 0 auto;
-  //padding: 16px;
   --mdc-layout-grid-margin-desktop: 0;
   --mdc-layout-grid-margin-tablet: 0;
   --mdc-layout-grid-margin-phone: 0;
@@ -86,10 +75,6 @@ blockquote {
   }
 }
 
-p {
-  line-height: 26px;
-}
-
 .tm-page-header blockquote p {
   font-size: 28px;
   line-height: 32px;
@@ -109,61 +94,28 @@ p {
 }
 
 .box--purple {
-  background: var(--tm-secondary);
+  background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
   border-radius: 32px;
   color: white;
 }
 
 .main-info {
   h2 {
-    color: var(--tm-black-title);
     text-align: center;
     border-radius: 50px;
     padding: 8px;
     background-color: white;
+    margin-bottom: 6em;
   }
 
   .box--lead {
     padding: 20px 8px;
   }
-
-  @media (min-width: 480px) {
-    position: relative;
-
-    h2 {
-      text-align: left;
-      background: none;
-      margin: 4em 0 0.5em; //64px 0 8px
-    }
-
-    .jumbotron__lead {
-      box-shadow: none;
-    }
-
-    .jumbotron__lead p {
-      max-width: 20em; //320px
-    }
-
-    .box--lead {
-      height: auto;
-    }
-  }
-  @media (max-width: 740px) {
-    h2 {
-      margin-top: 2em; //32px
-    }
-    .box--lead {
-      padding: 20px 18px;
-    }
-    .action-button {
-      margin: 0;
-    }
-  }
 }
 
 .page_sub-title p {
   font-size: 24px;
-  color: var(--tm-black);
+  color: var(--tm-contact-darkgrey);
   text-align: center;
   opacity: 0.7;
 }
@@ -180,7 +132,6 @@ p {
   background-color: var(--tm-primary);
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
   padding: 10px 28px;
-  width: max-content;
   margin: 0 1em;
   text-align: center;
   text-transform: uppercase;
@@ -218,29 +169,6 @@ p {
   &:hover {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.12);
-  }
-}
-
-.cooperation {
-  background: none;
-
-  .box {
-    align-items: center;
-    margin: 0 auto;
-    display: inline-flex;
-    @media screen and (min-width: 840px) {
-      padding: 0 120px;
-    }
-
-    a {
-      align-items: center;
-      display: inline-flex;
-      padding: 0 2em;
-    }
-  }
-
-  @media (max-width: 840px) {
-    text-align: center;
   }
 }
 
@@ -282,32 +210,25 @@ p {
   }
 
   .box {
-    padding-top: 2em; //32px
+    background: #fff url("/images/ic_listen.svg") center top 60px no-repeat;
+    background-size: auto 82px;
+    padding-top: 160px;
     z-index: 15;
     position: relative;
-    display: grid;
-
-    & > svg {
-      margin: 0 auto;
-      height: 140px;
-    }
-
-    h3 {
-      text-align: left;
-    }
   }
 
+  .box.box--develop {
+    background-image: url("/images/ic_develop.svg");
+  }
+
+  .box.box--verify {
+    background-image: url("/images/ic_verify.svg");
+  }
 
   .box--purple {
     font-size: 20px;
     padding: 4px 16px;
   }
-
-  .how-we-work_btn {
-    text-align: center;
-    margin: 2em auto; //32px
-  }
-
 }
 
 .tm-partners {
@@ -348,45 +269,6 @@ li.tm-partners__item--adler {
   width: 100px;
 }
 
-.steps {
-  h3 {
-    text-align: left;
-  }
-
-  .step_1 {
-    @media screen and (min-width: 840px) {
-      margin-top: 14em;
-    }
-  }
-
-  .steps__step {
-    @media (max-width: 840px) {
-      background-color: white;
-      box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1);
-      border-radius: 20px;
-      padding: 8px 20px;
-    }
-  }
-
-  @media screen and (min-width: 840px) {
-    background: url("/images/work-with-us_bgnd.png") center left no-repeat;
-    background-size: 40% 74%;
-    background-position-y: 220px;
-    z-index: 200;
-    .tm-layout-wrapper {
-      background: url(https://res.cloudinary.com/topmonks/image/upload/v1550609656/topmonks.com/svg/Group.svg) center no-repeat;
-      background-size: 100% 100%;
-      background-position: 10em 10em;
-    }
-  }
-
-  .hidden-box {
-    @media (max-width: 839px) {
-      display: none;
-    }
-  }
-}
-
 .product {
   background-color: #f3f3f3;
 
@@ -402,6 +284,7 @@ li.tm-partners__item--adler {
     color: #529cfb;
     font-size: 1em;
     text-transform: uppercase;
+    text-align: left;
   }
 
   @media screen and (max-width: 479px) {
@@ -451,125 +334,99 @@ li.tm-partners__item--adler {
       margin: 0 auto;
       background: url("/images/bgnd_product.svg") calc(50% - 20px) top no-repeat;
     }
+    .steps__step {
+      position: relative;
 
-    /* <!--
-     .steps__step {
-       position: relative;
-       &:nth-child(odd) {
-         top: 65px;
-         left: 460px;
-         @media screen and (min-width: 840px) {
-           left: 560px;
-         }
-       }
-       &:nth-child(even) {
-         top: 165px;
-         left: -268px;
-         @media screen and (min-width: 840px) {
-           left: -468px;
-         }
-       }
-       &.design {
-         top: 30px;
-         @media screen and (min-width: 840px) {
-           top: 45px;
-         }
-       }
-       &.development {
-         top: 130px;
-         @media screen and (min-width: 840px) {
-           top: 147px;
-         }
-       }
-     } -->*/
+      &:nth-child(odd) {
+        top: 65px;
+        left: 460px;
+        @media screen and (min-width: 840px) {
+          left: 560px;
+        }
+      }
+
+      &:nth-child(even) {
+        top: 165px;
+        left: -268px;
+        @media screen and (min-width: 840px) {
+          left: -468px;
+        }
+      }
+
+      &.design {
+        top: 30px;
+        @media screen and (min-width: 840px) {
+          top: 45px;
+        }
+      }
+
+      &.development {
+        top: 130px;
+        @media screen and (min-width: 840px) {
+          top: 147px;
+        }
+      }
+    }
   }
 }
 
 .customers {
+  padding: 3% 0 0;
+  background: #fff url("/images/bgnd_curve_4.svg") center top no-repeat;
+  background-size: 100% auto;
   text-align: center;
-  background: #fff url("https://res.cloudinary.com/topmonks/image/upload/v1550567115/topmonks.com/bgnd_grey.png") center top no-repeat;
-  @media screen and (min-width: 840px) {
-    background-size: 100% auto;
-  }
 
-  .box {
-    text-align: left;
-    line-height: 1.625em; //26px
-    padding-bottom: 3em; //48px
-    blockquote {
-      height: 15.25em; //244px
-      margin-bottom: 2em; //32px
-    }
-
-    figcaption {
-      padding-top: 1em; //16px
-    }
-
-    @media screen and (min-width: 840px) {
-      margin: 2em auto;
-    }
-  }
-
-  hr.line-between_grey {
+  .tm-bgnd-wrapper {
     background-color: #f3f3f3;
-    height: 2px;
-    border: none;
   }
 
   .name {
-    font-size: 1em; //16px
+    font-size: 16px;
     color: var(--tm-grey);
     text-align: center;
   }
 
-  svg {
-    display: flex;
-    margin: 3em 0 1em; //48px 0 16px
+  blockquote {
+    margin-bottom: 2em;
   }
 }
 
+.tm-testimonial__picture {
+  border-radius: 50%;
+  filter: grayscale(1);
+  width: 72px;
+  border: 2px solid #fff;
+}
 
 .contact {
+  text-align: center;
+  padding: 64px 0 100px;
+  background: #fff url("/images/bgnd_curve_2.svg") top -5px left calc(
+    50% - 530px
+  ) no-repeat;
+  @media screen and (min-width: 480px) {
+    background-position: top -1px left calc(50% - 360px);
+  }
+
   .contact_title p {
     color: var(--tm-black);
   }
 
   .person--photo img {
     border-radius: 50%;
-    width: 112px;
+    width: 183px;
     filter: saturate(0);
-  }
-
-  .box_member-contact {
-    align-self: center;
-  }
-
-  .box {
-    padding: 14px 24px 0;
-
-    h3, p {
-      text-align: left;
-    }
   }
 
   svg {
     margin-top: 8px;
   }
-
-  @media screen and (min-width: 840px) {
-    text-align: center;
-  }
-  @media (max-width: 740px) {
-    .box_member-contact p {
-      text-align: center;
-    }
-  }
 }
 
 #page-topmonks-index {
   @media screen and (max-width: 479px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png") right top -1px no-repeat;
-    background-size: 50% auto;
+    background: #fff url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_auto,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png") no-repeat right calc(50% - 145px) top -1px;
+    background-size: 352px auto;
     overflow-x: hidden;
   }
   @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2),
@@ -578,17 +435,17 @@ li.tm-partners__item--adler {
   screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
   screen and (max-width: 479px) and (min-resolution: 192dpi),
   screen and (max-width: 479px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png");
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_352,dpr_2,q_auto,f_auto/v1531754590/topmonks.com/bgnd_header_mobile.png");
   }
   @media screen and (min-width: 480px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png") right top -1px no-repeat;
-    background-size: 50% auto;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_auto,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png") no-repeat right calc(50% - 390px) top -1px;
+    background-size: 1017px auto;
     overflow-x: hidden;
   }
   @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2),
   screen and (min-width: 480px) and (min-resolution: 192dpi),
   screen and (min-width: 480px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png");
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_2,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png");
   }
   @media screen and (min-width: 480px) and (max-width: 839px) {
     background-position: right calc(50% - 460px) top -1px;
@@ -615,46 +472,28 @@ li.tm-partners__item--adler {
   }
 
   .tm-app-bar {
-    background-color: transparent;
+    background-color: #fff;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
     @media screen and (max-width: 839px) {
-      &.tm-app-bar--sticky {
-        background-color: #fff;
-      }
       .tm-logo {
+        color: var(--tm-secondary);
         padding-top: 2px;
         font-size: 22px;
       }
     }
     @media screen and (min-width: 840px) {
-      height: 112px;
-      &.tm-app-bar--sticky {
-        background-color: #fff;
-        height: 72px;
-
-        .tm-layout-wrapper {
-          padding: 20px 0 0 16px;
-        }
-
-        + main {
-          margin-top: 72px;
-        }
-
-        .tm-menu__list a {
-          color: var(--tm-black-title);
-        }
-      }
+      background-color: #fff;
+      height: 72px;
       .tm-layout-wrapper {
-        padding: 66px 0 0 16px;
-        transition: padding 0.25s;
+        padding: 20px 0 0 16px;
       }
       + main {
-        margin-top: 112px;
+        margin-top: 72px;
+      }
+      .tm-menu__list a {
+        color: var(--tm-primary);
       }
     }
-  }
-
-  .tm-menu__list a {
-    color: var(--tm-black-title);
   }
 
   .tm-app-bar--open {
@@ -670,9 +509,26 @@ li.tm-partners__item--adler {
   }
 }
 
-footer {
-  p {
-    color: #fff;
+.cooperation {
+  background: none;
+
+  .box {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    a {
+      align-items: center;
+      display: inline-flex;
+      padding: 0 16px;
+    }
+  }
+
+  @media (max-width: 840px) {
+    text-align: center;
   }
 }
 
@@ -681,6 +537,36 @@ footer {
   .action-button {
     display: inline-block;
     margin: 0;
+  }
+  .main-info {
+    position: relative;
+
+    h2 {
+      text-align: left;
+      background: none;
+      margin: 64px 0 8px;
+    }
+
+    .jumbotron__lead {
+      box-shadow: none;
+    }
+
+    .jumbotron__lead p {
+      max-width: 320px;
+    }
+
+    .box--lead {
+      height: auto;
+    }
+  }
+  .cooperation {
+    h2 {
+      margin-bottom: 18px;
+    }
+
+    .box + .box {
+      margin-top: calc(var(--mdc-layout-grid-gutter-desktop) * 2);
+    }
   }
   .customers blockquote p {
     font-size: 1.66em;
@@ -718,3 +604,5 @@ footer {
     padding: 24px;
   }
 }
+
+
